# rust-calendar-scraper

./: .gitignore  Cargo.toml  config.yaml
src/: address_fetcher.rs  client.rs  cmdutils.rs  config.rs  lib.rs  models.rs  repository.rs  schema.rs
src/site_scraper/: mod.rs  month_based.rs
src/venue_import/: mod.rs
