[package]
name = "calendar-scraper"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
chrono = { version = "0.4.42", default-features = false, features = ["serde"] }
clap = { version = "4.5.53", features = ["derive"] }
config = "0.15.19"
diesel = { version = "2.3.4", features = ["mysql", "chrono", "serde_json", "r2d2" ] }
http = "1.4.0"
http-body-util = "0.1.3"
reqwest = { version = "0.12.26", features = [ "blocking" ] }
scraper = "0.25.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["macros", "net", "rt", "rt-multi-thread", "time", "tokio-macros"] }
tower = { version = "0.5.2", features = ["limit", "load", "reconnect", "retry", "timeout", "tokio", "util"] }
tower-http = "0.6.8"
tower-reqwest = { version = "0.5.3", features = ["set-header"] }
# validator = { version = "0.20.0", features = ["derive"] }
dashmap = "6.1.0"
url = "2.5.7"
